--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "jit-grunt": "^0.9.0",
     "typescript": "^1.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-watch": "^0.6.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
